--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ nav {
     position: fixed;
     display: flex;
     top: 0%;
+    z-index: 7;
     left: auto;
     right: auto;
     bottom: auto;
